[BugFix] [ui] Hero Text is overflowing out of screen for some phone and tablet devices

--- a/theme/index.scss
+++ b/theme/index.scss
@@ -199,6 +199,11 @@ $overview-index-color-dark: #f9f9f9;
     & > span {
       white-space: nowrap;
       overflow: hidden;
+      display: flex;
+      flex-wrap: wrap;
+      width: 90vw;
+      column-gap: 20px;
+      justify-content: center;
     }
     @media (max-width: 768px) {
       margin-top: 54px;
